<resources>
    <string name="app_name">wdp-mobile</string>


    <string name="login_title"><annotation font="b">암호 입력</annotation></string>
    <string name="login_sub_title"><annotation font="r">간편 로그인 암호를 입력해 주세요.</annotation></string>
    <string name="login_sub_title_error"><annotation font="r">비밀번호가 일치하지 않습니다.\n처음부터 다시 시도해 주세요.</annotation></string>
    <string name="login_number"><annotation font="r">%s</annotation></string>

    <string name="dialog_btn_title_ok">확인</string>
    <string name="dialog_title_notification">알림</string>
    <string name="dialog_content_notification_permission">권한을 허용해주셔야 앱을 이용할 수 있습니다.</string>

    <string name="dialog_permissions_title">사용 권한 안내</string>
    <string name="dialog_title_permissions_1">저장소</string>
    <string name="dialog_contents_permissions_1">앱의 UI표현을 위한 이미지 저장 및 게시글 작성시 갤러리 접근을 위해 필요한 권한입니다.</string>

    <string name="rrn_title_certification">공인인증서 인증</string>
    <string name="rrn_number">주민등록번호</string>
    <string name="rrn_number_input">주민등록번호 입력</string>
    <string name="rrn__notification_noregistration">* 안심하세요. 공인인증서를 저희 서버에 등록하지 않아요!</string>
    <string name="rrn_btn_ok">확인</string>
    <string name="rrn_title_choice">공인인증서 선택</string>
    <string name="rrn_title">공인인증서 인증</string>
    <string name="rrn_login_dontwarry">* 안심하세요. 공인인증서를 저희 서버에 등록하지 않아요!</string>
    <string name="rrn_input_pw">공인인증서 비밀번호 입력</string>
    <string name="rrn_pw">비밀번호</string>
    <string name="rrn_pw_input">비밀번호 입력</string>
    <string name="rrn_pw_missmatch">비밀번호가 맞지 않습니다.</string>

    <string name="app_name2">ProgressViews</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="progress">progress</string>
</resources>
