<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#ffffff">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/dialog_permissions_title"
                android:textColor="#333333"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="#e7e7e7"
                app:layout_constraintTop_toBottomOf="@+id/tv_dialog_title" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_ico_folder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:adjustViewBounds="true"
                app:layout_constraintBottom_toBottomOf="@+id/tv_dialog_title_permissions_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_dialog_title_permissions_1"
                app:srcCompat="@drawable/ic_ico_power_folder" />

            <TextView
                android:id="@+id/tv_dialog_title_permissions_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="41dp"
                android:layout_marginEnd="30dp"
                android:text="@string/dialog_title_permissions_1"
                android:textColor="#333333"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/iv_ico_folder"
                app:layout_constraintTop_toBottomOf="@+id/tv_dialog_title" />

            <TextView
                android:id="@+id/tv_dialog_contents_permissions_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="30dp"
                android:text="@string/dialog_contents_permissions_1"
                android:textColor="#4a4a4a"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_dialog_title_permissions_1"
                app:layout_constraintTop_toBottomOf="@+id/tv_dialog_title_permissions_1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mb_ok"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="#ff5167"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/dialog_btn_title_ok"
                android:textColor="@android:color/white"
                app:cornerRadius="-1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_dialog_contents_permissions_1" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</FrameLayout>